feat: complete tech import vertical slice (frontend → db)
Added /api/admin/import/techs endpoint to AdminImportPage
Implemented TechImportService with faction gate evaluator
Added TechImportSnapshot + mapper (quadrant → TechType, prereqs, unlock tuples)
Store shallow unlock refs (unlockType + unlockKey) instead of descriptor graphs
Persist descriptionLines directly for tooltip rendering
Filter out hidden + no-faction techs before persistence
Reworked TechEntity to use unlock embeddables (district-style element collection)
Updated repository upsert logic (insert / update / delete obsolete)
Fixed Hibernate immutable collection merge issue
Warm tech cache after successful import
Verified idempotent import (insert → unchanged on re-run)

Tech slice now mirrors districts + improvements structure, descriptor-free and frontend-driven.